[package]
name = "rar"
version = "0.3.0"
authors = ["Robert Schütte <schuetterobert@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Roba1993/RAR"
homepage = "https://github.com/Roba1993/RAR"
description = """
edition= "2021"
Rust native RAR extractor based upon nom
"""
exclude = [
    "assets/*",
]

[dependencies]
nom = "4.2.3"
failure = "0.1.8"
lazy_static = "1.4.0"
chrono = "0.4.37"
rust-crypto = "0.2.36"